--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 </head>
 <body>
-
+    <header>
+        <section class="header">
+            <div>
+                <img src="img/logo.png" alt="logo">
+            </div>
+            <nav>
+                <ul>
+                    <li>FAQ</li>
+                    <li>Оплата и доставка</li>
+                    <li>Возврат</li>
+                    <li>Исследования</li>
+                    <li>Личный кабинет</li>
+                    <li>8 (800) 600-09-90</li>
+                </ul>
+            </nav>
+            <div class="header_basket">
+                <img src="img/basket.png" alt="basket">
+                <div class="header_basket__quantity">1</div>
+            </div>
+        </section>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
