feat: complete start page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,25 @@
             </div>
         </section>
     </header>
-    <main></main>
+    <main>
+        <section class="startPage_wrapper">
+            <div class="startPage">
+                <div class="startPage_info">
+                    <h1>АКТИВИРУЙ ИММУНИТЕТ!</h1>
+                    <p class="startPage_info-textH1">Всего пять секунд в день помогут укрепить иммунитет
+                        и повысить защитные силы организма</p>
+                    <h2>NOOTRIS ПОМОГАЕТ</h2>
+                    <p class="startPage_info-textH2">Вашему организму во время пандемии
+                        и сезонных простуд</p>
+                </div>
+                <div class="startPage_imgs">
+                    <img id="startPage_imgs-ginger" src="img/ginger.png" alt="ginger">
+                    <img id="startPage_imgs-nootris" src="img/nootris.png" alt="nootris">
+                    <img id="startPage_imgs-lemon" src="img/Lemon.png" alt="lemon">
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
