feat: complete sale page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </section>
     </header>
     <main>
+        <section class="separation"></section>
         <section class="startPage_wrapper">
             <div class="startPage">
                 <div class="startPage_info">
@@ -46,7 +47,43 @@
                 </div>
             </div>
         </section>
+        <section class="salePage_wrapper">
+            <div class="salePage">
+                <h3>
+                    ПОЛУЧИ ЗАЩИТУ ИММУНИТЕТА СО СКИДКОЙ -15% ПЕРВЫМ!
+                </h3>
+                <div class="salePage_price">
+                    <p class="salePage_price-old">750₽</p>
+                    <p class="salePage_price-new">690₽</p>
+                </div>
+                <div class="salePage_info">
+                    <div class="salePage_info-item">
+                        <img id="salePage_info-ginger" src="img/ginger.png" alt="ginger">
+                        <p class="salePage_info-item-text1" id="salePage_info-ginger-text1">
+                            Содержит
+                        </p>
+                        <p class="salePage_info-item-text2">имбирь</p>
+                    </div>
+                    <div class="salePage_info-item">
+                        <img id="salePage_info-nootris" src="img/nootris_footer.png" alt="nootris">
+                        <p class="salePage_info-item-text1" id="salePage_info-nootris-text1">
+                            + Бесплатная доставка
+                        </p>
+                        <p class="salePage_info-item-text2" id="salePage_info-nootris-text2">
+                            Специальная цена
+                        </p>
+                    </div>
+                    <div class="salePage_info-item">
+                        <img id="salePage_info-virus" src="img/vorus.png" alt="virus">
+                        <p class="salePage_info-item-text1" id="salePage_info-virus-text1">
+                            Нейтрализует
+                        </p>
+                        <p class="salePage_info-item-text2">вирусы</p>
+                    </div>
+                </div>
+                <button>Оформить заказ!</button>
+            </div>
+        </section>
     </main>
-    <footer></footer>
 </body>
 </html>
