feat: refactor header

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                     <li>Возврат</li>
                     <li>Исследования</li>
                     <li>Личный кабинет</li>
-                    <li>8 (800) 600-09-90</li>
+                    <li>8 8 (800) 600-09-90</li>
                 </ul>
             </nav>
             <div class="header_basket">
-                <img src="img/basket.png" alt="basket">
+                <img class="header_basket-img" src="img/basket.png" alt="basket">
                 <div class="header_basket__quantity">1</div>
             </div>
         </section>
