feat: update separation under header

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         </section>
     </header>
     <main>
-        <section class="separation"></section>
+        <section class="separation">
+            <img src="img/separation.png" alt="">
+        </section>
         <section class="startPage_wrapper">
             <div class="startPage">
                 <div class="startPage_info">
