feat: add media query (min-width: 992px) and (max-width: 1391px)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
                     <li>Возврат</li>
                     <li>Исследования</li>
                     <li>Личный кабинет</li>
-                    <li>8 8 (800) 600-09-90</li>
+                    <li>
+                        <a href="tel:888006000990">
+                            8 8 (800) 600-09-90
+                        </a>
+                    </li>
                 </ul>
             </nav>
             <div class="header_basket">
