feat: add media query (min-width: 768px) and (max-width: 991px)

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
                 <img class="header_basket-img" src="img/basket.png" alt="basket">
                 <div class="header_basket__quantity">1</div>
             </div>
+            <div class="header_menu-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </section>
     </header>
     <main>
