feat: add burger menu

--- a/index.html
+++ b/index.html
@@ -9,31 +9,33 @@
 <body>
     <header>
         <section class="header">
-            <div>
-                <img src="img/logo.png" alt="logo">
-            </div>
-            <nav>
-                <ul>
-                    <li>FAQ</li>
-                    <li>Оплата и доставка</li>
-                    <li>Возврат</li>
-                    <li>Исследования</li>
-                    <li>Личный кабинет</li>
-                    <li>
-                        <a href="tel:888006000990">
-                            8 8 (800) 600-09-90
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="header_basket">
-                <img class="header_basket-img" src="img/basket.png" alt="basket">
-                <div class="header_basket__quantity">1</div>
-            </div>
             <div class="header_menu-btn">
                 <span></span>
                 <span></span>
                 <span></span>
+            </div>
+            <div class="header_logo">
+                <img src="img/logo.png" alt="logo">
+            </div>
+            <div class="menu">
+                <nav>
+                    <ul>
+                        <li>FAQ</li>
+                        <li>Оплата и доставка</li>
+                        <li>Возврат</li>
+                        <li>Исследования</li>
+                        <li>Личный кабинет</li>
+                        <li>
+                            <a href="tel:888006000990">
+                                8 8 (800) 600-09-90
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="header_basket">
+                <img class="header_basket-img" src="img/basket.png" alt="basket">
+                <div class="header_basket__quantity">1</div>
             </div>
         </section>
     </header>
@@ -96,5 +98,6 @@
             </div>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
