feat: refactor styles

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <title>Nootris</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" href="img/virus.png"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width">
 </head>
 <body>
 <header>
-    <section class="header">
-        <div class="header_burger">
+    <div class="header">
+        <div class="header__burger">
             <span></span>
             <span></span>
             <span></span>
         </div>
-        <div class="header_logo">
+        <div class="header__logo">
             <img src="img/logo.png" alt="logo">
         </div>
-        <div class="header_nav">
+        <div class="header__nav">
             <ul class="header_nav__list">
                 <li class="header_nav__list__item">FAQ</li>
                 <li class="header_nav__list__item">Оплата и доставка</li>
@@ -36,12 +36,12 @@
             <img class="header_basket__img" src="img/basket.png" alt="basket">
             <div class="header_basket__quantity">1</div>
         </div>
-    </section>
+    </div>
 </header>
 <main>
-    <section class="separation">
+    <div class="separation">
         <img class="separation_img" src="img/separation.png" alt="">
-    </section>
+    </div>
     <section class="startPage_wrapper">
         <div class="startPage">
             <div class="startPage_info">
@@ -59,7 +59,7 @@
             </div>
         </div>
     </section>
-    <section class="salePage_wrapper">
+    <section class="salePage__wrapper">
         <div class="salePage">
             <h3 class="salePage_title">
                 ПОЛУЧИ ЗАЩИТУ ИММУНИТЕТА СО СКИДКОЙ -15% ПЕРВЫМ!
