feat: refactor project

--- a/index.html
+++ b/index.html
@@ -19,81 +19,81 @@
             <img src="img/logo.png" alt="logo">
         </div>
         <div class="header__nav">
-            <ul class="header_nav__list">
-                <li class="header_nav__list__item">FAQ</li>
-                <li class="header_nav__list__item">Оплата и доставка</li>
-                <li class="header_nav__list__item">Возврат</li>
-                <li class="header_nav__list__item">Исследования</li>
-                <li class="header_nav__list__item">Личный кабинет</li>
-                <li class="header_nav__list__item">
-                    <a class="header_nav__list__item__link" href="tel:888006000990">
+            <ul class="header__nav__list">
+                <li class="header__nav__list__item">FAQ</li>
+                <li class="header__nav__list__item">Оплата и доставка</li>
+                <li class="header__nav__list__item">Возврат</li>
+                <li class="header__nav__list__item">Исследования</li>
+                <li class="header__nav__list__item">Личный кабинет</li>
+                <li class="header__nav__list__item">
+                    <a class="header__nav__list__item__link" href="tel:888006000990">
                         8 (800) 600-09-90
                     </a>
                 </li>
             </ul>
         </div>
-        <div class="header_basket">
-            <img class="header_basket__img" src="img/basket.png" alt="basket">
-            <div class="header_basket__quantity">1</div>
+        <div class="header__basket">
+            <img class="header__basket__img" src="img/basket.png" alt="basket">
+            <div class="header__basket__quantity">1</div>
         </div>
     </div>
 </header>
 <main>
     <div class="separation">
-        <img class="separation_img" src="img/separation.png" alt="">
+        <img class="separation__img" src="img/separation.png" alt="">
     </div>
-    <section class="startPage_wrapper">
+    <section class="startPage__wrapper">
         <div class="startPage">
-            <div class="startPage_info">
-                <h1 class="startPage_info__title">АКТИВИРУЙ ИММУНИТЕТ!</h1>
-                <p class="startPage_info__text1">Всего пять секунд в день помогут укрепить иммунитет
+            <div class="startPage__info">
+                <h1 class="startPage__info__title">АКТИВИРУЙ ИММУНИТЕТ!</h1>
+                <p class="startPage__info__text1">Всего пять секунд в день помогут укрепить иммунитет
                     и повысить защитные силы организма</p>
-                <h2 class="startPage_info__subtitle">NOOTRIS ПОМОГАЕТ</h2>
-                <p class="startPage_info__text2">Вашему организму во время пандемии
+                <h2 class="startPage__info__subtitle">NOOTRIS ПОМОГАЕТ</h2>
+                <p class="startPage__info__text2">Вашему организму во время пандемии
                     и сезонных простуд</p>
             </div>
-            <div class="startPage_img">
-                <img id="startPage_img__ginger" src="img/ginger.png" alt="ginger">
-                <img id="startPage_img__nootris" src="img/nootris.png" alt="nootris">
-                <img id="startPage_img__lemon" src="img/lemon.png" alt="lemon">
+            <div class="startPage__img">
+                <img id="startPage__img__ginger" src="img/ginger.png" alt="ginger">
+                <img id="startPage__img__nootris" src="img/nootris.png" alt="nootris">
+                <img id="startPage__img__lemon" src="img/lemon.png" alt="lemon">
             </div>
         </div>
     </section>
     <section class="salePage__wrapper">
         <div class="salePage">
-            <h3 class="salePage_title">
+            <h3 class="salePage__title">
                 ПОЛУЧИ ЗАЩИТУ ИММУНИТЕТА СО СКИДКОЙ -15% ПЕРВЫМ!
             </h3>
-            <div class="salePage_price">
-                <p class="salePage_price__old">750₽</p>
-                <p class="salePage_price__new">690₽</p>
+            <div class="salePage__price">
+                <p class="salePage__price__old">750₽</p>
+                <p class="salePage__price__new">690₽</p>
             </div>
-            <div class="salePage_info">
-                <div class="salePage_info__item">
-                    <img id="salePage_info__item-ginger" src="img/ginger.png" alt="ginger">
-                    <p class="salePage_info__item-text1" id="salePage_info__item-ginger-text1">
+            <div class="salePage__info">
+                <div class="salePage__info__item">
+                    <img id="salePage__info__item__ginger" src="img/ginger.png" alt="ginger">
+                    <p class="salePage__info__item__text1" id="salePage__info__item__ginger__text1">
                         Содержит
                     </p>
-                    <p class="salePage_info__item-text2">имбирь</p>
+                    <p class="salePage__info__item__text2">имбирь</p>
                 </div>
-                <div class="salePage_info__item">
-                    <img id="salePage_info__item-nootris" src="img/nootris_footer.png" alt="nootris">
-                    <p class="salePage_info__item-text1" id="salePage_info__item-nootris-text1">
+                <div class="salePage__info__item">
+                    <img id="salePage__info__item__nootris" src="img/nootris_footer.png" alt="nootris">
+                    <p class="salePage__info__item__text1" id="salePage__info__item__nootris__text1">
                         + Бесплатная доставка
                     </p>
-                    <p class="salePage_info__item-text2" id="salePage_info__item-nootris-text2">
+                    <p class="salePage__info__item__text2" id="salePage__info__item__nootris__text2">
                         Специальная цена
                     </p>
                 </div>
-                <div class="salePage_info__item">
-                    <img id="salePage_info__item-virus" src="img/virus.png" alt="virus">
-                    <p class="salePage_info__item-text1" id="salePage_info__item-virus-text1">
+                <div class="salePage__info__item">
+                    <img id="salePage__info__item__virus" src="img/virus.png" alt="virus">
+                    <p class="salePage__info__item__text1" id="salePage_info__item__virus__text1">
                         Нейтрализует
                     </p>
-                    <p class="salePage_info__item-text2">вирусы</p>
+                    <p class="salePage__info__item__text2">вирусы</p>
                 </div>
             </div>
-            <button  class="salePage_button">Оформить заказ!</button>
+            <button  class="salePage__button">Оформить заказ!</button>
         </div>
     </section>
 </main>
