feat: complete project

--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
 <body>
 <header>
     <div class="header">
-        <div class="header__burger">
+        <div class="burger">
             <span></span>
             <span></span>
             <span></span>
         </div>
-        <div class="header__logo">
+        <div class="logo">
             <img src="img/logo.png" alt="logo">
         </div>
-        <div class="header__nav">
-            <ul class="header__nav__list">
-                <li class="header__nav__list__item">FAQ</li>
-                <li class="header__nav__list__item">Оплата и доставка</li>
-                <li class="header__nav__list__item">Возврат</li>
-                <li class="header__nav__list__item">Исследования</li>
-                <li class="header__nav__list__item">Личный кабинет</li>
-                <li class="header__nav__list__item">
-                    <a class="header__nav__list__item__link" href="tel:888006000990">
+        <div class="navListWrapper">
+            <ul class="navList">
+                <li class="navList__item">FAQ</li>
+                <li class="navList__item">Оплата и доставка</li>
+                <li class="navList__item">Возврат</li>
+                <li class="navList__item">Исследования</li>
+                <li class="navList__item">Личный кабинет</li>
+                <li class="navList__item">
+                    <a class="navList__link" href="tel:888006000990">
                         8 (800) 600-09-90
                     </a>
                 </li>
             </ul>
         </div>
-        <div class="header__basket">
-            <img class="header__basket__img" src="img/basket.png" alt="basket">
-            <div class="header__basket__quantity">1</div>
+        <div class="basket">
+            <img class="basket__img" src="img/basket.png" alt="basket">
+            <div class="basket__quantity">1</div>
         </div>
     </div>
 </header>
@@ -42,55 +42,55 @@
     <div class="separation">
         <img class="separation__img" src="img/separation.png" alt="">
     </div>
-    <section class="startPage__wrapper">
+    <section class="startPageWrapper">
         <div class="startPage">
             <div class="startPage__info">
-                <h1 class="startPage__info__title">АКТИВИРУЙ ИММУНИТЕТ!</h1>
-                <p class="startPage__info__text1">Всего пять секунд в день помогут укрепить иммунитет
+                <h1 class="startPage__infoTitle">АКТИВИРУЙ ИММУНИТЕТ!</h1>
+                <p class="startPage__infoText1">Всего пять секунд в день помогут укрепить иммунитет
                     и повысить защитные силы организма</p>
-                <h2 class="startPage__info__subtitle">NOOTRIS ПОМОГАЕТ</h2>
-                <p class="startPage__info__text2">Вашему организму во время пандемии
+                <h2 class="startPage__infoSubtitle">NOOTRIS ПОМОГАЕТ</h2>
+                <p class="startPage__infoText2">Вашему организму во время пандемии
                     и сезонных простуд</p>
             </div>
-            <div class="startPage__img">
-                <img id="startPage__img__ginger" src="img/ginger.png" alt="ginger">
-                <img id="startPage__img__nootris" src="img/nootris.png" alt="nootris">
-                <img id="startPage__img__lemon" src="img/lemon.png" alt="lemon">
+            <div class="startPage__images">
+                <img id="ginger" src="img/ginger.png" alt="ginger">
+                <img id="nootris" src="img/nootris.png" alt="nootris">
+                <img id="lemon" src="img/lemon.png" alt="lemon">
             </div>
         </div>
     </section>
-    <section class="salePage__wrapper">
+    <section class="salePageWrapper">
         <div class="salePage">
             <h3 class="salePage__title">
                 ПОЛУЧИ ЗАЩИТУ ИММУНИТЕТА СО СКИДКОЙ -15% ПЕРВЫМ!
             </h3>
             <div class="salePage__price">
-                <p class="salePage__price__old">750₽</p>
-                <p class="salePage__price__new">690₽</p>
+                <p class="salePage__oldPrice">750₽</p>
+                <p class="salePage__newPrice">690₽</p>
             </div>
             <div class="salePage__info">
-                <div class="salePage__info__item">
-                    <img id="salePage__info__item__ginger" src="img/ginger.png" alt="ginger">
-                    <p class="salePage__info__item__text1" id="salePage__info__item__ginger__text1">
+                <div class="salePage__infoItem">
+                    <img id="salePageGinger" src="img/ginger.png" alt="ginger">
+                    <p class="salePage__infoItemText1" id="salePage__info__item__ginger__text1">
                         Содержит
                     </p>
-                    <p class="salePage__info__item__text2">имбирь</p>
+                    <p class="salePage__infoItemText2">имбирь</p>
                 </div>
-                <div class="salePage__info__item">
-                    <img id="salePage__info__item__nootris" src="img/nootris_footer.png" alt="nootris">
-                    <p class="salePage__info__item__text1" id="salePage__info__item__nootris__text1">
+                <div class="salePage__infoItem">
+                    <img id="salePageNootris" src="img/nootris_footer.png" alt="nootris">
+                    <p class="salePage__infoItemText1" id="salePage__info__item__nootris__text1">
                         + Бесплатная доставка
                     </p>
-                    <p class="salePage__info__item__text2" id="salePage__info__item__nootris__text2">
+                    <p class="salePage__infoItemText2" id="salePage__info__item__nootris__text2">
                         Специальная цена
                     </p>
                 </div>
-                <div class="salePage__info__item">
-                    <img id="salePage__info__item__virus" src="img/virus.png" alt="virus">
-                    <p class="salePage__info__item__text1" id="salePage_info__item__virus__text1">
+                <div class="salePage__infoItem">
+                    <img id="salePageVirus" src="img/virus.png" alt="virus">
+                    <p class="salePage__infoItemText1" id="salePage_info__item__virus__text1">
                         Нейтрализует
                     </p>
-                    <p class="salePage__info__item__text2">вирусы</p>
+                    <p class="salePage__infoItemText2">вирусы</p>
                 </div>
             </div>
             <button  class="salePage__button">Оформить заказ!</button>
